# CPP

./: .gitmodules
CCiA_2nd/: CMakeLists.txt
CCiA_2nd/src/: CMakeLists.txt
CCiA_2nd/src/c++20/: 1_jthread.cpp  2_jthread_local.cpp  3_coroutines.cpp  3_generators.cpp  CMakeLists.txt
CCiA_2nd/src/c++20/include/: barrier.h  coroutines_class.h  generators.h  jthread_local.h
CCiA_2nd/src/ch01/: CMakeLists.txt  example_launch_threads.cpp
CCiA_2nd/src/ch02/: CMakeLists.txt  example_2_1_joinable.cpp  example_2_2_join_detach.cpp  example_2_3_join_exception.cpp  example_2_4_pass_arguments.cpp  example_2_5_pass_ref_problem.cpp  example_2_6_transfer_ownership.cpp  example_2_7_utils.cpp  example_2_8_thread_local.cpp  listing_2.1.cpp  listing_2.6.cpp  listing_2.7.cpp  listing_2.8.cpp  listing_2.9.cpp
CCiA_2nd/src/ch02/include/: common_objs.h  listing_2_7_joining_thread.h  listing_2_9_naive_parallel_accumulate.h
CCiA_2nd/src/ch03/: CMakeLists.txt  example_3_.cpp  example_3_6_deadlock.cpp  example_3_7_deadlock_resolved.cpp  example_3_deadlock_resolved.cpp  example_3_deadlock_with_mutex2.cpp  hierarchical_mutex.h  listing_3.1.cpp  listing_3.11.cpp  listing_3.13.cpp  listing_3.2.cpp  listing_3.3.h  listing_3.4.cpp  listing_3.4.h  listing_3.5.cpp  listing_3.6.cpp  listing_3.6_swap_lock_scoped_lock.h  listing_3.7.cpp  listing_3.8.cpp  listing_3.9_swap_unique_lock.h  thread_safe_stack.h
CCiA_2nd/src/ch03/include/: listing_3_5_thread_safe_stack.h
CCiA_2nd/src/ch04/: CMakeLists.txt  example_4_10_promise.cpp  example_4_10_promise_exception.cpp  example_4_10_shared_future.cpp  example_4_1_driver_and_passner.cpp  example_4_5_thread_safe_queue_low_level.cpp  example_4_6_async.cpp  example_4_7_parallel_accumulate.cpp  example_4_9_package_task.cpp  listing_4.1.cpp  listing_4.10.h  listing_4.12_quick_sort.h  listing_4.13_par_quick_sort.h  listing_4.13_sort_test.cpp  listing_4.27_flex_barrier.h  listing_4.3.h  listing_4.5.cpp  listing_4.6.cpp  listing_4.7.cpp  listing_4.8.h
CCiA_2nd/src/ch04/include/: listing_4_5_thread_safe_queue.h  thread_safe_queue.h  thread_safe_queue_low_level.h
CCiA_2nd/src/ch05/: CMakeLists.txt  ex_5_1_1_atomic_flag.cpp  ex_5_1_2_atomic_bool.cpp  ex_5_1_3_compare_and_exchange.cpp  ex_5_1_4_atomic_pointers.cpp  listing_5.10.cpp  listing_5.10_consume.cpp  listing_5.11.cpp  listing_5.11_release_sequence.cpp  listing_5.12_fence.cpp  listing_5.13.cpp  listing_5.1_spin_lock.cpp  listing_5.2.cpp  listing_5.2_atomic_inter_threads.cpp  listing_5.3.cpp  listing_5.4_seq_cst.cpp  listing_5.5_relaxed.cpp  listing_5.6_1_multi_threads.cpp  listing_5.6_relaxed_multi_threads.cpp  listing_5.7.cpp  listing_5.7_acquire_release.cpp  listing_5.8.cpp  listing_5.8_acquire_release.cpp  listing_5.9_transitive_sync.cpp
CCiA_2nd/src/ch06/: CMakeLists.txt  listing_6.10.cpp  listing_6.13.h  listing_6.1_thread_safe_stack_ch3.h  listing_6.2.cpp  listing_6.2_queue_conv.h  listing_6.3_queue_use_shared_ptr.h  listing_6.3_use_shared_ptr.cpp  listing_6.4.cpp  listing_6.4_queue_fine_lock_v1.h  listing_6.5.cpp  listing_6.5_queue_with_dummy.h  listing_6.6_fine_grained_lock_queue.cpp  listing_6.6_queue_fine_lock_v2_dummy.h  listing_6.9_queue_file_lock_v3_wait_and_pop.h
CCiA_2nd/src/ch06/include/: listing_6.10_queue_fine_lock_final.h  thread_safe_queue_low_level.h
CCiA_2nd/src/ch07/: listing_7.2.h  listing_7.3_lockfree_stack_push_pop.h  listing_7.5_ref_cnt_reclamation.h
CCiA_2nd/src/ch08/: CMakeLists.txt  ex_8_3_matrix.cpp  listing_8.10_parallel_find_async.h  listing_8.11_parallel_partial_sum.cpp  listing_8.11_parallel_partial_sum.h  listing_8.7_parallel_for_each.h  listing_8.8_parallel_for_each_async.h  listing_8.8_parallel_for_test.cpp  listing_8.9_parallel_find.h  listing_8_1_par_quick_sort.cpp
CCiA_2nd/src/ch08/include/: common.h  matrix.h
CCiA_2nd/src/ch09/: CMakeLists.txt  common.h  listing_9.1.cpp  listing_9.3.cpp  listing_9.5.cpp  listing_9.6.cpp  listing_9.8.cpp  parallel_accumulate.h  parallel_sorter.h  simple_thread_pool.h  simple_thread_pool_wait.h  thread_safe_queue.h
CCiA_2nd/src/ch09/include/: common.h  parallel_accumulate.h  parallel_sorter.h  simple_thread_pool.h  thread_pool.h  thread_safe_queue.h  work_stealing_queue.h
CCiA_2nd/src/ch10_parallel_algorithm/: CMakeLists.txt  ex_10_1_parallel_stl_intro.cpp
DesignPattern/DPGoF/Structural_Patterns/Adapter/: CMakeLists.txt
DesignPattern/DPGoF/Structural_Patterns/Composite/: CMakeLists.txt
DesignPattern/DPGoF/Structural_Patterns/Decorator/: CMakeLists.txt
Effective/ModernCPP/item03/: .CMakeLists.txt.swp  CMakeLists.txt
Effective/ModernCPP/item04/: CMakeLists.txt
Effective/ModernCPP/item08/: CMakeLists.txt
Effective/ModernCPP/item12/: CMakeLists.txt
Effective/ModernCPP/item13/: CMakeLists.txt
Effective/ModernCPP/item18/: CMakeLists.txt
Effective/ModernCPP/item21/: CMakeLists.txt
Effective/ModernCPP/item23/: CMakeLists.txt
Effective/ModernCPP/item24/: CMakeLists.txt
OOP/: install.txt
Template/basics/: CMakeLists.txt
Template/basics/src/: errornovel1.cpp  errornovel2.cpp  isprime.cpp  isprime11.cpp  isprime14.cpp  max3ref.cpp  myfirstmain_rev.cpp  specialmemtmpl2.cpp  varprint1.cpp  varprint2.cpp
cppstd17-code/lang/: CMakeLists.txt  aggr14.cpp  alignednew11.cpp  alignednew11.hpp  alignednew17.cpp  alignednewincomp.cpp  customer1.hpp  customer2.hpp  factory.cpp  factory.hpp  hasdelete.hpp  hexfloat.cpp  inlinethreadlocal.hpp  noexceptcalls.cpp  structbind1.cpp  structbind2.cpp  structbind2.hpp  tracknew.hpp
cppstd17-code/lang/ch01/: example.cpp  structbind1.hpp
cppstd17-code/lang/ch03/: inlinethreadlocal1.cpp  inlinethreadlocal2.cpp
cppstd17-code/lang/ch04/: aggr14.cpp
cppstd17-code/lang/ch05/: call_by_value_category.cpp  factory.cpp
cppstd17-code/lang/ch06/: lambdathis.cpp
cppstd17-code/lang/ch08/: evalexcept.cpp  noexceptcalls.cpp
cppstd17-code/lang/ch28/: alignednew.hpp  alignednew11.hpp  tracknew.cpp
cppstd17-code/tmpl/: CMakeLists.txt  invoke.cpp  invoke.hpp  overload.hpp
cppstd17-code/tmpl/ch09/: ch09_ex1.cpp  ch09_ex2.cpp  classarglambda.hpp  type_decay.cpp  type_name.hpp
(+587 files in other folders)
