add_executable(example_2_1_joinable example_2_1_joinable.cpp)
target_link_libraries(example_2_1_joinable pthread)

add_executable(example_2_2_join_detach example_2_2_join_detach.cpp)
target_link_libraries(example_2_2_join_detach pthread)

add_executable(example_2_3_join_exception example_2_3_join_exception.cpp)
target_link_libraries(example_2_3_join_exception pthread)

add_executable(example_2_4_pass_arguments example_2_4_pass_arguments.cpp)
target_link_libraries(example_2_4_pass_arguments pthread)

add_executable(example_2_5_pass_ref_problem example_2_5_pass_ref_problem.cpp)
target_link_libraries(example_2_5_pass_ref_problem pthread)

add_executable(example_2_6_transfer_ownership example_2_6_transfer_ownership.cpp)
target_link_libraries(example_2_6_transfer_ownership pthread)

add_executable(example_2_7_utils example_2_7_utils.cpp)
target_link_libraries(example_2_7_utils pthread)

add_executable(listing_2.1 listing_2.1.cpp)
target_link_libraries(listing_2.1 pthread)

add_executable(listing_2.2 listing_2.2.cpp)
target_link_libraries(listing_2.2 pthread)

add_executable(listing_2.3 listing_2.3.cpp)
target_link_libraries(listing_2.3 pthread)

add_executable(listing_2.4 listing_2.4.cpp)
target_link_libraries(listing_2.4 pthread)

add_executable(listing_2.5 listing_2.5.cpp)
target_link_libraries(listing_2.5 pthread)

add_executable(listing_2.6 listing_2.6.cpp)
target_link_libraries(listing_2.6 pthread)

add_executable(listing_2.7 listing_2.7.cpp)
target_link_libraries(listing_2.7 pthread)

add_executable(listing_2.8 listing_2.8.cpp)
target_link_libraries(listing_2.8 pthread)

add_executable(listing_2.9 listing_2.9.cpp)
target_link_libraries(listing_2.9 pthread)