add_executable(listing_6.10 listing_6.10.cpp)
target_link_libraries(listing_6.10 pthread)

add_executable(example_6_6_thread_safe_queue_low_level example_6_6_thread_safe_queue_low_level.cpp)
target_link_libraries(example_6_6_thread_safe_queue_low_level pthread)

# add_executable(listing_6.12 listing_6.12.cpp)
# target_link_libraries(listing_6.12 pthread)

# add_executable(listing_6.13 listing_6.13.cpp)
# target_link_libraries(listing_6.13 pthread)